fixed layout issues

--- a/static/products.css
+++ b/static/products.css
@@ -28,6 +28,10 @@ body {
 border-radius: 1rem;
 }
 
+.logo_name, .name_job {
+  margin-left: 21%;
+}
+
 header {
   width: 100%;
   background: var(--primary-color);
